fw/whackdeck/build/log/idf_py_stdout_output_245690
[1/12] Building C object esp-idf/tdeck-lib/CMakeFiles/__idf_tdeck-lib.dir/tdeck-lib.c.obj
FAILED: esp-idf/tdeck-lib/CMakeFiles/__idf_tdeck-lib.dir/tdeck-lib.c.obj 
/home/larzuk/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-244-g4d0db7045d\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/build/config -I/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/include -I/home/larzuk/esp/esp-idf/components/newlib/platform_include -I/home/larzuk/esp/esp-idf/components/freertos/config/include -I/home/larzuk/esp/esp-idf/components/freertos/config/include/freertos -I/home/larzuk/esp/esp-idf/components/freertos/config/xtensa/include -I/home/larzuk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/larzuk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/larzuk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/larzuk/esp/esp-idf/components/freertos/esp_additions/include -I/home/larzuk/esp/esp-idf/components/esp_hw_support/include -I/home/larzuk/esp/esp-idf/components/esp_hw_support/include/soc -I/home/larzuk/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/larzuk/esp/esp-idf/components/esp_hw_support/dma/include -I/home/larzuk/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/larzuk/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/larzuk/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/larzuk/esp/esp-idf/components/heap/include -I/home/larzuk/esp/esp-idf/components/log/include -I/home/larzuk/esp/esp-idf/components/soc/include -I/home/larzuk/esp/esp-idf/components/soc/esp32s3 -I/home/larzuk/esp/esp-idf/components/soc/esp32s3/include -I/home/larzuk/esp/esp-idf/components/hal/platform_port/include -I/home/larzuk/esp/esp-idf/components/hal/esp32s3/include -I/home/larzuk/esp/esp-idf/components/hal/include -I/home/larzuk/esp/esp-idf/components/esp_rom/include -I/home/larzuk/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/larzuk/esp/esp-idf/components/esp_rom/esp32s3 -I/home/larzuk/esp/esp-idf/components/esp_common/include -I/home/larzuk/esp/esp-idf/components/esp_system/include -I/home/larzuk/esp/esp-idf/components/esp_system/port/soc -I/home/larzuk/esp/esp-idf/components/esp_system/port/include/private -I/home/larzuk/esp/esp-idf/components/xtensa/esp32s3/include -I/home/larzuk/esp/esp-idf/components/xtensa/include -I/home/larzuk/esp/esp-idf/components/xtensa/deprecated_include -I/home/larzuk/esp/esp-idf/components/lwip/include -I/home/larzuk/esp/esp-idf/components/lwip/include/apps -I/home/larzuk/esp/esp-idf/components/lwip/include/apps/sntp -I/home/larzuk/esp/esp-idf/components/lwip/lwip/src/include -I/home/larzuk/esp/esp-idf/components/lwip/port/include -I/home/larzuk/esp/esp-idf/components/lwip/port/freertos/include -I/home/larzuk/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/larzuk/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/larzuk/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/larzuk/esp/esp-idf/components/esp_adc/include -I/home/larzuk/esp/esp-idf/components/esp_adc/interface -I/home/larzuk/esp/esp-idf/components/esp_adc/esp32s3/include -I/home/larzuk/esp/esp-idf/components/esp_adc/deprecated/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck=. -fmacro-prefix-map=/home/larzuk/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/tdeck-lib/CMakeFiles/__idf_tdeck-lib.dir/tdeck-lib.c.obj -MF esp-idf/tdeck-lib/CMakeFiles/__idf_tdeck-lib.dir/tdeck-lib.c.obj.d -o esp-idf/tdeck-lib/CMakeFiles/__idf_tdeck-lib.dir/tdeck-lib.c.obj -c /home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c: In function 'td_board_init':
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:15:26: warning: passing argument 1 of 'td_battery_init' from incompatible pointer type [-Wincompatible-pointer-types]
   15 |   return td_battery_init(Board);
      |                          ^~~~~
      |                          |
      |                          td_board_t **
In file included from /home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:5:
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/include/tdeck-lib.h:27:39: note: expected 'td_board_t *' but argument is of type 'td_board_t **'
   27 | esp_err_t td_battery_init(td_board_t *Board);
      |                           ~~~~~~~~~~~~^~~~~
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c: In function 'td_battery_init':
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:19:3: error: cannot convert to a pointer type
   19 |   td_battery_t *Battery = (td_battery_t *)(Board->Battery);
      |   ^~~~~~~~~~~~
In file included from /home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:1:
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:39:82: error: 'td_battery_t' has no member named 'cali'; did you mean 'cal'?
   39 |     ESP_ERROR_CHECK(adc_cali_create_scheme_curve_fitting(&cali_config, &Battery->cali));
      |                                                                                  ^~~~
/home/larzuk/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c: In function 'td_battery_read':
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:53:3: error: cannot convert to a pointer type
   53 |   td_battery_t *Battery = (td_battery_t *)(Board->Battery);
      |   ^~~~~~~~~~~~
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c: At top level:
/home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/components/tdeck-lib/tdeck-lib.c:9:20: warning: 'TAG' defined but not used [-Wunused-variable]
    9 | const static char *TAG = "TDECKLIB";
      |                    ^~~
[2/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[3/12] Performing build step for 'bootloader'
[1/1] cd /home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/build/bootloader/esp-idf/esptool_py && /home/larzuk/.espressif/python_env/idf5.3_py3.11_env/bin/python /home/larzuk/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/larzuk/GIT/WHackDeck/WHackDeck/fw/whackdeck/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
ninja: build stopped: subcommand failed.
